<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_themes">Темная тема</string>
    <string name="User_agreement">Пользовательское соглашение</string>
    <string name="Share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>

    <!--    mail subject -->
    <string name="you_mail" translatable="false">you@mail.com</string>
    <string name="yp_url" translatable="false">https://practicum.yandex.ru/profile/android-developer</string>
    <string name="yp_offer" translatable="false">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <!--    search-->
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="Refresh">Обновить</string>
    <string name="connection_problem">Проблемы со связью\n\n
        Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_hint">Вводите название, можно указать год для более точного поиска</string>
    <string name="you_looking_for">Вы искали</string>
    <string name="Clear_the_history">Очистить историю</string>

    <!--    AudioPlayer-->
    <string name="country">Страна:</string>
    <string name="genre">Жанр:</string>
    <string name="release_date">Год:</string>
    <string name="album">Альбом:</string>
    <string name="duration">Длительность:</string>

    <!--    MediaLibrary-->
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_text">Вы не создали ни одного плейлиста</string>
    <string name="empty_media_text">Ваша медиатека пуста</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>

    <!--    AlertDialog-->
    <string name="alert_create_playlist">Завершить создание плейлиста?</string>
    <string name="alert_data_will_be_lost">Все несохранённые данные будут потеряны</string>
    <string name="Cancel">Отмена</string>
    <string name="Complete">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="yes">да</string>
    <string name="no">нет</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="not_available">Плейлист недоступен</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="confirm_delete_playlist">Хотите удалить плейлист?</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save">Сохранить</string>


</resources>