<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_layout"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:title="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_button"
        style="@style/SettingText"
        android:text="@string/dark_themes" />

    <TextView
        android:id="@+id/support"
        style="@style/SettingText"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/support" />

    <TextView
        android:id="@+id/share"
        style="@style/SettingText"
        android:text="@string/Share"
        app:drawableEndCompat="@drawable/share" />

    <TextView
        android:id="@+id/user_agreement"
        style="@style/SettingText"
        android:text="@string/User_agreement"
        app:drawableEndCompat="@drawable/arrow_forward" />

</LinearLayout>