<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/ScreenBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_layout"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_height="56dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/YP_White"
            android:textSize="26sp" />

    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button"
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:text="@string/search"
        app:icon="@drawable/search" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/media_library_button"
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:text="@string/media_library"
        app:icon="@drawable/media_library" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setting_button"
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:text="@string/settings"
        app:icon="@drawable/settings" />

</LinearLayout>