<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/ActivityTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioPlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title=" " />

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="26dp"
            android:src="@drawable/album"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTag="imageViewTag"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_tags="imageViewTag" />

        <TextView
            android:id="@+id/songTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/colorLightNight"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toTopOf="@id/barrier"
            tools:text="Song Title" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/colorLightNight"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/songTitle"
            tools:text="Artist Name" />

        <ImageView
            android:id="@+id/plusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:src="@drawable/fab_add"
            app:layout_constraintEnd_toStartOf="@id/play"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/play"
            app:layout_constraintBottom_toBottomOf="@id/plusButton"
            app:layout_constraintEnd_toStartOf="@id/favoriteButton"
            app:layout_constraintStart_toEndOf="@id/plusButton"
            app:layout_constraintTop_toTopOf="@id/plusButton" />

        <ImageView
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pause"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/plusButton"
            app:layout_constraintEnd_toStartOf="@id/favoriteButton"
            app:layout_constraintStart_toEndOf="@id/plusButton"
            app:layout_constraintTop_toTopOf="@id/plusButton" />


        <ImageView
            android:id="@+id/favoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fab_favorite"
            app:layout_constraintBottom_toBottomOf="@id/play"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/play"
            app:layout_constraintTop_toTopOf="@id/play" />


        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="0:30"
            android:textColor="@color/colorLightNight"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/play"
            app:layout_constraintStart_toStartOf="@id/play"
            app:layout_constraintTop_toBottomOf="@id/play" />

        <TextView
            android:id="@+id/duration"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/time" />

        <TextView
            android:id="@+id/trackTimeMills"
            style="@style/AudioPlayerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/duration"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintTop_toTopOf="@id/duration"
            tools:text="5:35" />

        <TextView
            android:id="@+id/album"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/album"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/duration" />

        <TextView
            android:id="@+id/collectionName"
            style="@style/AudioPlayerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/album"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/age"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/release_date"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/album" />


        <TextView
            android:id="@+id/releaseDate"
            style="@style/AudioPlayerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/age"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            tools:text="1965" />

        <TextView
            android:id="@+id/genre"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/age" />

        <TextView
            android:id="@+id/primaryGenreName"
            style="@style/AudioPlayerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/genre"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            tools:text="Rock" />

        <TextView
            android:id="@+id/place"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <TextView
            android:id="@+id/country"
            style="@style/AudioPlayerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/place"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            tools:text="Великобритания" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>